--- a/.app/css/2-lib/variables.scss
+++ b/.app/css/2-lib/variables.scss
@@ -2,4 +2,5 @@ $global-gutter: var(--space-s-m);
 $layout-padding-block-start: var(--space-l-2xs);
 $layout-padding-block-end: var(--space-l);
 $header-height: var(--space-xl-2xl);
+$header-gap: var(--space-2xs-xs);
 $sidebar-width: 280px;
