--- a/.app/css/3-global/base.scss
+++ b/.app/css/3-global/base.scss
@@ -1,7 +1,13 @@
 @use "../2-lib/variables" as *;
 
 :root {
+	--full-vh: 100vh;
 	--header-border: 1px;
+
+	@supports (height: 100svh) {
+		--full-vh: 100svh;
+	}
+
 	@media (min-resolution: 192dpi) {
 		--header-border: 0.5px;
 	}
