--- a/.app/css/4-components/app-layout.scss
+++ b/.app/css/4-components/app-layout.scss
@@ -2,7 +2,7 @@
 @use "../2-lib/variables" as *;
 
 .app-layout__wrapper {
-	min-block-size: calc(100svh - $header-height);
+	min-block-size: calc(var(--full-vh) - $header-height);
 	display: flex;
 	flex-direction: column;
 
@@ -24,10 +24,8 @@
 	}
 
 	@include media-breakpoint-up("xl") {
-		& {
-			display: grid;
-			grid-template-columns: $sidebar-width minmax(0, 1fr) $sidebar-width;
-		}
+		display: grid;
+		grid-template-columns: $sidebar-width minmax(0, 1fr) $sidebar-width;
 	}
 }
 
@@ -39,18 +37,19 @@
 			position: sticky;
 			inset: 0;
 			inset-block-start: $header-height;
-			block-size: calc(100svh - $header-height);
+			block-size: calc(var(--full-vh) - $header-height);
 			overflow: auto;
 			z-index: 1;
 		}
 	}
 
+	/* TODO: make a mixin because sidebar has the same first four styles*/
 	@include media-breakpoint-up("xl") {
 		position: sticky;
-		inset: 0;
-		inset-block-start: $header-height;
-		block-size: calc(100vh - $header-height);
+		inset: $header-height 0 0;
+		block-size: calc(var(--full-vh) - $header-height);
 		overflow: auto;
+
 		z-index: 1;
 	}
 }
