--- a/.app/css/4-components/page.scss
+++ b/.app/css/4-components/page.scss
@@ -2,10 +2,10 @@
 	margin-block-end: var(--space-s-l);
 }
 
-.page__title {
-	font-size: var(--font-size-fluid-6);
-	line-height: var(--font-line-height-xs);
-}
+// .page__title {
+// 	font-size: var(--font-size-fluid-6);
+// 	line-height: var(--font-line-height-xs);
+// }
 
 .page__description {
 	font-size: var(--font-size-fluid-1);
