update page layout, sidebar styles

--- a/.app/css/2-lib/variables.scss
+++ b/.app/css/2-lib/variables.scss
@@ -1,6 +1,7 @@
 $global-gutter: var(--space-s-m);
 $layout-padding-block-start: var(--space-l-2xs);
-$layout-padding-block-end: var(--space-l);
+$layout-padding-block-end: var(--space-s);
 $header-height: var(--space-xl-2xl);
 $header-gap: var(--space-2xs-xs);
 $sidebar-width: 280px;
+$action-icon-size: var(--space-6);
