--- a/.app/css/2-lib/mixins.scss
+++ b/.app/css/2-lib/mixins.scss
@@ -1,9 +1,11 @@
+@use "../2-lib/variables" as *;
+
 @mixin action-icon {
 	display: grid;
 	place-items: center;
 
-	block-size: 2.25rem;
-	inline-size: 2.25rem;
+	block-size: $action-icon-size;
+	inline-size: $action-icon-size;
 
 	border-radius: var(--rounded-full);
 	color: var(--color-neutral-text);
