--- a/.app/css/4-components/page.scss
+++ b/.app/css/4-components/page.scss
@@ -1,3 +1,12 @@
+@use "../2-lib/variables" as *;
+@use "../2-lib/breakpoints" as *;
+
+.page {
+	@include media-breakpoint-up("lg") {
+		padding-block-end: calc(2 * $action-icon-size);
+	}
+}
+
 .page__header {
 	margin-block-end: var(--space-s-l);
 }
