--- a/.app/css/4-components/icon-btn.scss
+++ b/.app/css/4-components/icon-btn.scss
@@ -1,23 +1,21 @@
+@use "../2-lib/variables" as *;
+
 .icon-btn {
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding: var(--space-2);
-  border-radius: var(--rounded-full);
-  border: 0;
-  background: transparent;
-  color: var(--color-primary-text);
-  cursor: pointer;
-  transition: all 300ms ease;
+	--cluster-gap: 0.5ch;
 
-  &:hover,
-  &:focus-visible {
-    background-color: var(--color-neutral-bg-hover);
-  }
+	/* magic number to make the button height less than the header height */
+	padding-block: calc(var(--space-3) - 1px);
+	padding-inline: var(--space-1);
+	border-radius: var(--rounded-full);
+	color: var(--color-primary-text);
+	transition: all 200ms ease;
 
-  &:active {
-    background-color: var(--color-neutral-bg-active);
-  }
+	// &:hover,
+	// &:focus-visible {
+	// 	background-color: var(--color-neutral-bg-hover);
+	// }
+
+	&:active {
+		background-color: var(--color-neutral-bg-active);
+	}
 }
