--- a/.app/_includes/partials/sidebar-toggle.njk
+++ b/.app/_includes/partials/sidebar-toggle.njk
@@ -13,6 +13,8 @@
     #}
     <span>Menu</span>
     <svg
+      class="feather feather-menu"
+      id="sidebar-toggle"
       xmlns="http://www.w3.org/2000/svg"
       width="1.125em"
       height="1.125em"
@@ -22,7 +24,6 @@
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
-      class="feather feather-menu"
     >
       <line x1="3" y1="6" x2="21" y2="6"></line>
       <line x1="3" y1="12" x2="21" y2="12"></line>
