update toc styles

--- a/.app/css/4-components/toc.scss
+++ b/.app/css/4-components/toc.scss
@@ -1,22 +1,80 @@
-.toc__label {
-  margin: 0;
-  color: var(--color-neutral-text);
-  font-size: var(--font-size-sm);
-  font-weight: var(--font-weight-bold);
+@use "../2-lib/mixins" as *;
+
+$toc-gutter: var(--space-2);
+$summary-padding: var(--space-xs);
+$chevron-size: 1.125em; // 1.125em is the size of the icon being imported
+
+.toc {
+	border-block: 1px solid var(--color-neutral-line);
+	@include font-size-browser;
+
+	summary {
+		--cluster-gap: #{$toc-gutter};
+		padding-block: $summary-padding;
+
+		&::-webkit-details-marker,
+		&::marker {
+			display: none;
+		}
+	}
+}
+
+.toc[open] {
+	padding-block-end: $summary-padding;
+
+	svg {
+		transform: rotate(90deg);
+	}
+}
+
+.toc__list {
+	padding-inline-start: $toc-gutter;
+	position: relative;
+
+	&:before {
+		content: "";
+		position: absolute;
+		inset-block-start: 0;
+		inset-inline-start: calc(($chevron-size - 1px) / 2);
+
+		block-size: 100%;
+		inline-size: 1px;
+		background: var(--color-neutral-line);
+	}
 }
 
 .toc__item {
-  margin-block: var(--space-1);
-  margin-inline-start: calc((var(--level, 1) - 1) * var(--space-4));
+	position: relative;
 }
 
 .toc__link {
-  color: var(--color-primary-text);
-  font-size: var(--font-size-sm);
-  font-weight: var(--font-weight-normal);
-  text-decoration: none;
+	display: block;
+	padding-block: var(--space-3xs);
+	padding-inline-start: calc(
+		$chevron-size + ((var(--level, 1) - 1) * var(--space-4))
+	);
+	color: var(--color-neutral-text-contrast);
+	text-decoration: none;
+	transition: all 200ms ease;
 
-  &:hover {
-    text-decoration: underline;
-  }
+	&:hover {
+		background-color: var(--color-primary-bg);
+		color: var(--color-primary-text);
+	}
+
+	&:before {
+		content: "";
+
+		position: absolute;
+		inset-block-start: 0;
+		inset-inline-start: 0;
+		block-size: 100%;
+		inline-size: 2px;
+
+		background: transparent;
+	}
+
+	&:hover::before {
+		background: var(--color-primary-bg-solid);
+	}
 }
