--- a/.app/_includes/partials/toc.njk
+++ b/.app/_includes/partials/toc.njk
@@ -6,7 +6,8 @@
     role="navigation"
   >
     <summary
-      class="toc__label cluster"
+      class="toc__label grid"
+      data-type="icon-toggle"
       id="app-panel-toc"
       aria-label="Table of Contents"
     >
