--- a/.app/_includes/macros/sidebar-tree.njk
+++ b/.app/_includes/macros/sidebar-tree.njk
@@ -6,59 +6,42 @@
   >
     {% set items = tree | reverse %}
     {% for item in items %}
-      <li
+      <li>
         {% if item.children.length %}
-          x-data="collapsible('app:sidebar:section:notes:group:{{group.id }}:tree:{{item.$treeKey}}', {{ item.$treeExpanded }})"
-        {% endif %}
-      >
-        {% if item.url %}
-          <div class="nav-list__link-with-toggle">
-            <a
-              class="nav-list__link"
-              href="{{ item.url }}"
-              {{ item.url | ariaCurrent(page) }}
+          <details>
+            <summary
+              class="nav-list__toggle grid"
+              data-type="icon-toggle"
             >
+              {{ 'chevron-right' | feather | safe }}
               <span>{{ item.title }}</span>
-            </a>
+            </summary>
             {% if item.children.length %}
-              {# removed "nav-list__link" class from the button below  #}
-              <button
-                class="nav-list__toggle"
-                type="button"
-                aria-controls="app:sidebar:section:notes:group:{{ group.id }}:tree:{{ item.$treeKey }}:list"
-                aria-expanded="true"
-                :aria-expanded="expanded"
-                @click="toggle()"
-              >
-                {{ 'chevron-right' | feather | safe }}
-                <span class="visually-hidden">
-                  Toggle {{ item.title }}
-                </span>
-              </button>
+              <div class="nav-list-container flow">
+                {% if item.url %}
+                  <a
+                    class="nav-list__link"
+                    href="{{ item.url }}"
+                    {{ item.url | ariaCurrent(page) }}
+                  >
+                    <span>Index</span>
+                  </a>
+                {% endif %}
+                {{ sidebarTree(item.children, group, page) }}
+              </div>
             {% endif %}
-          </div>
+          </details>
         {% else %}
-          {# removed "nav-list__link" class from the button below  #}
-          <button
-            class="nav-list__toggle grid"
-            type="button"
-            data-type="icon-toggle"
-            aria-controls="app:sidebar:section:notes:group:{{ group.id }}:tree:{{ item.$treeKey }}:list"
-            aria-expanded="true"
-            :aria-expanded="expanded"
-            @click="toggle()"
+          <a
+            class="nav-list__link"
+            href="{{ item.url }}"
+            {{ item.url | ariaCurrent(page) }}
           >
-            {{ 'chevron-right' | feather | safe }}
             <span>{{ item.title }}</span>
-          </button>
-        {% endif %}
-
-        {% if item.children.length %}
-          <div x-show="expanded" id="app:sidebar:section:notes:group:{{ group.id }}:tree:{{ item.$treeKey }}:list">
-            {{ sidebarTree(item.children, group, page) }}
-          </div>
+          </a>
         {% endif %}
       </li>
     {% endfor %}
   </ul>
 {% endmacro %}
+
