--- a/.app/css/4-components/nav-group.scss
+++ b/.app/css/4-components/nav-group.scss
@@ -1,34 +1,46 @@
+@use "../2-lib/variables" as *;
+
 .nav-group {
-  &[data-expanded] + .nav-group {
-    margin-block-start: var(--space-6);
-  }
+	&[data-expanded] + .nav-group {
+		margin-block-start: var(--space-2);
+	}
 
-  &:not([data-expanded]) + .nav-group {
-    margin-block-start: var(--space-4);
-  }
-}
-
-.nav-group__subtitle,
-.nav-group__toggle {
-  margin-block-end: var(--space-1);
-  padding-block: 0;
-  padding-inline: var(--space-2);
-  font-size: var(--font-size-xs);
-  color: var(--color-neutral-text);
-  text-transform: uppercase;
-  letter-spacing: 0.02em;
+	// &:not([data-expanded]) + .nav-group {
+	// 	margin-block-start: var(--space-4);
+	// }
 }
 
 .nav-group__toggle {
-  inline-size: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border: 0;
-  background: transparent;
-  cursor: pointer;
+	--grid-gap: #{$details-gutter};
+}
 
-  &[aria-expanded="true"] svg {
-    transform: rotate(90deg);
-  }
+.nav-group__toggle + * {
+	padding-inline-start: calc(1.125em + (var(--level, 1) - 1) * var(--space-4));
+
+	&:before {
+		inset-inline-start: calc(($chevron-size + 1px) / 2 + var(--space-2));
+	}
+}
+
+.nav-group__toggle {
+	// inline-size: 100%;
+	// display: flex;
+	// gap: var(--space-2);
+	// align-items: center;
+	// justify-content: flex-start;
+	border: 0;
+	background: transparent;
+
+	// font-size: var(--font-size-browser);
+	// letter-spacing: 0.01em;
+	// line-height: var(--font-line-height-sm);
+
+	&:hover {
+		background-color: var(--color-primary-bg);
+		color: var(--color-neutral-text-contrast);
+	}
+
+	&[aria-expanded="true"] svg {
+		transform: rotate(90deg);
+	}
 }
