--- a/.app/css/4-components/notes-list.scss
+++ b/.app/css/4-components/notes-list.scss
@@ -1,6 +1,7 @@
 @use "sass:map";
 @use "../1-tokens/breakpoints" as *;
 @use "../2-lib/breakpoints" as *;
+@use "../2-lib/variables" as *;
 
 .notes-list {
 	--flow-space: var(--space-2);
@@ -26,7 +27,10 @@
 			justify-content: space-between;
 			align-items: first baseline;
 			position: relative;
-			padding-block: var(--space-2);
+
+			a {
+				padding-block: $link-padding-block;
+			}
 
 			&:hover {
 				time {
