--- a/.app/css/4-components/search.scss
+++ b/.app/css/4-components/search.scss
@@ -1,114 +1,196 @@
+@use "../2-lib/mixins" as *;
+@use "../2-lib/variables" as *;
+
+$search-gutter: var(--space-4);
+
 .search {
-  position: relative;
+	--cluster: var(--space-2xs) 0;
+	position: relative;
+
+	+ noscript {
+		--grid-horizontal-alignment: center;
+		--grid-gap: var(--space-xs);
+
+		grid-template-columns: auto minmax(0, 1fr);
+
+		padding: var(--space-xs) $global-gutter;
+		color: var(--color-neutral-text-contrast);
+		border-radius: 0 var(--rounded-md) var(--rounded-md) 0;
+		outline: 1px solid var(--color-neutral-bg);
+		border-inline-start: 3px solid #dc2626;
+
+		svg {
+			color: #dc2626;
+		}
+	}
 }
 
 .search__input {
-  inline-size: 230px;
-  position: relative;
-  padding-block: var(--space-2);
-  padding-inline: var(--space-5);
-  border: none;
-  border-radius: var(--rounded-full);
-  background-color: var(--color-neutral-bg);
-  color: var(--color-neutral-text-contrast);
+	position: relative;
 
-  .search[data-mode="inline"] & {
-    inline-size: 100%;
-    display: block;
-    padding-inline: var(--space-4);
-    border-radius: var(--rounded-md);
-  }
+	inline-size: calc($sidebar-width - $global-gutter - $global-gutter);
+	block-size: var(--space-l);
+	padding-inline: $search-gutter;
 
-  &:hover {
-    background-color: var(--color-neutral-bg-hover);
-  }
+	border: none;
+	border-radius: var(--rounded-full);
+	background-color: var(--color-neutral-bg);
 
-  &::placeholder {
-    color: var(--color-neutral-placeholder);
-  }
+	color: var(--color-neutral-text-contrast);
+	transition: all 200ms ease;
+
+	@include font-size-browser;
+
+	.search[data-mode="inline"] & {
+		inline-size: 100%;
+		block-size: var(--space-xl);
+		border-radius: var(--rounded-md);
+
+		display: block;
+		font-size: inherit;
+		letter-spacing: normal;
+		line-height: inherit;
+	}
+
+	&::placeholder {
+		color: var(--color-neutral-text);
+		transition: all 200ms ease;
+	}
+
+	&:hover {
+		background-color: var(--color-neutral-bg-hover);
+
+		&::placeholder {
+			color: var(--color-neutral-text-contrast);
+		}
+	}
 }
 
 .search__kbd {
-  display: none;
+	font-size: var(--font-size-xs);
 
-  input:placeholder-shown:not(:focus) + & {
-    display: block;
-    position: absolute;
-    inset-block-start: 50%;
-    inset-inline-end: var(--space-4);
-    transform: translateY(-50%);
-    color: var(--color-neutral-placeholder);
-    font-size: var(--font-size-xs);
-    font-family: var(--font-family-mono);
-    pointer-events: none;
-  }
+	position: absolute;
+	inset-block-start: 50%;
+	inset-inline-end: $search-gutter;
+	z-index: 1;
+	translate: 0 -50%;
+
+	kbd {
+		margin: 0;
+
+		:where(.search:hover, .search:focus-within) & {
+			box-shadow: 0 1px 0 0.5px var(--kbd-color-border);
+			inset-block-start: 1px;
+		}
+	}
 }
 
 .search__popover {
-  .search[data-mode="overlay"] & {
-    inline-size: 400px;
-    max-block-size: 300px;
-    position: absolute;
-    z-index: 1;
-    inset-block-start: calc(100% + 4px);
-    inset-inline-end: 0;
-    padding: var(--space-1);
-    box-shadow: var(--shadow-lg);
-    border-radius: var(--rounded-lg);
-    background-color: var(--color-surface);
-    overflow: auto;
-  }
+	.search[data-mode="overlay"] & {
+		position: absolute;
+		inset-block-start: calc(100% + var(--space-2));
+		inset-inline-end: 0;
 
-  .search[data-mode="inline"] & {
-    margin-block-start: var(--space-6);
-  }
+		inline-size: 400px;
+		max-block-size: 300px;
+		padding: var(--space-1);
+		border-radius: var(--rounded-lg);
+		background-color: var(--color-surface);
+
+		box-shadow: var(--shadow-lg);
+		overflow: auto;
+		z-index: 1;
+	}
+
+	.search[data-mode="inline"] & {
+		max-inline-size: 100%;
+	}
 }
 
 .search__info {
-  color: var(--color-neutral-text);
+	color: var(--color-neutral-text);
+	@include font-size-browser;
 
-  .search[data-mode="overlay"] & {
-    padding-inline: var(--space-4);
-    padding-block: var(--space-2);
-    font-size: var(--font-size-sm);
-  }
+	.search[data-mode="overlay"] & {
+		padding-inline: $search-gutter;
+		padding-block: var(--space-2);
+		font-size: var(--font-size-sm);
+	}
 }
 
-.search__results > li + li {
-  margin-block-start: var(--space-1);
+[data-mode="overlay"] {
+	.search__results > li {
+		padding-block: var(--space-1);
+	}
+
+	.search__results > li + li {
+		border-block-start: 1px solid var(--color-neutral-bg);
+	}
+}
+
+[data-mode="inline"] {
+	.search__results > li + li {
+		margin-block-start: var(--space-1);
+	}
 }
 
 .search__result {
-  display: flex;
-  flex-direction: column;
-  gap: var(--space-1);
-  padding-inline: var(--space-4);
-  padding-block: var(--space-2);
-  border-radius: calc(var(--rounded-lg) - var(--space-1));
-  text-decoration: none;
+	--grid-gap: var(--space-1) #{$search-gutter};
 
-  .search__popover:hover & {
-    transition: all 200ms ease;
-  }
+	padding-block: var(--space-xs-s);
+	padding-inline: $search-gutter;
+	border-radius: calc(var(--rounded-lg) - var(--space-1));
+	text-decoration: none;
 
-  &[aria-selected="true"] {
-    background-color: var(--color-primary-bg-subtle);
-  }
+	svg {
+		display: none;
+	}
+
+	@media (hover: hover) {
+		grid-template-columns: minmax(0, 1fr) auto;
+
+		span {
+			grid-column: 1;
+		}
+
+		svg {
+			grid-column: 2;
+
+			display: block;
+			opacity: 0;
+			transition: opacity 200ms ease;
+		}
+	}
+
+	.search__popover:hover & {
+		transition: all 200ms ease;
+	}
+
+	&[aria-selected="true"] {
+		background-color: var(--color-primary-bg);
+
+		svg {
+			opacity: 1;
+			color: var(--color-primary-text);
+		}
+	}
 }
 
 .search__result:hover {
-  background-color: var(--color-primary-bg-subtle);
+	background-color: var(--color-primary-bg);
+	text-decoration-line: none;
 }
 
 .search__note-title {
-  color: var(--color-primary-text);
-  font-weight: var(--font-weight-medium);
+	color: var(--color-primary-text);
+	font-weight: var(--font-weight-medium);
 }
 
 .search__note-content {
-  color: var(--color-neutral-text);
-  font-size: var(--font-size-sm);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+	color: var(--color-neutral-text);
+	font-size: var(--font-size-sm);
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	// max-inline-size: 100%;
 }
