--- a/.app/_includes/layouts/base.njk
+++ b/.app/_includes/layouts/base.njk
@@ -11,6 +11,7 @@ panel: true
     <title>{{ title or page.fileSlug }}</title>
     <meta name="generator" content="{{ eleventy.generator }}">
     <link rel="stylesheet" href="{{ setup.css.output }}">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📝</text></svg>">
     <meta name="view-transition" content="same-origin" />
   </head>
   <body>
