--- a/.app/css/4-components/heading-wrapper.scss
+++ b/.app/css/4-components/heading-wrapper.scss
@@ -10,6 +10,7 @@
 	}
 
 	.anchor-link {
+		padding-block: var(--space-2xs);
 		outline-offset: var(--space-1);
 		text-decoration: none;
 		margin-inline-start: var(--space-1);
