--- a/.app/css/4-components/search.scss
+++ b/.app/css/4-components/search.scss
@@ -93,7 +93,6 @@ $search-gutter: var(--space-4);
 
 		inline-size: 400px;
 		max-block-size: 300px;
-		padding: var(--space-1);
 		border-radius: var(--rounded-lg);
 		background-color: var(--color-surface);
 
@@ -118,19 +117,19 @@ $search-gutter: var(--space-4);
 	}
 }
 
-[data-mode="overlay"] {
-	.search__results > li {
-		padding-block: var(--space-1);
-	}
-
-	.search__results > li + li {
-		border-block-start: 1px solid var(--color-neutral-bg);
+:where([data-mode="overlay"] .search__results) {
+	> li + li {
+		border-block-start: 1px solid var(--color-primary-bg-active);
 	}
 }
 
-[data-mode="inline"] {
-	.search__results > li + li {
+:where([data-mode="inline"] .search__results) {
+	> li + li {
 		margin-block-start: var(--space-1);
+	}
+
+	a {
+		border-radius: var(--rounded-md);
 	}
 }
 
@@ -139,7 +138,6 @@ $search-gutter: var(--space-4);
 
 	padding-block: var(--space-xs-s);
 	padding-inline: $search-gutter;
-	border-radius: calc(var(--rounded-lg) - var(--space-1));
 	text-decoration: none;
 
 	svg {
@@ -176,6 +174,17 @@ $search-gutter: var(--space-4);
 	}
 }
 
+@supports (width: 8cqi) {
+	.search__popover {
+		container-type: inline-size;
+		min-inline-size: 100%;
+	}
+
+	.search__result {
+		--grid-gap: var(--space-1) 8cqi;
+	}
+}
+
 .search__result:hover {
 	background-color: var(--color-primary-bg);
 	text-decoration-line: none;
@@ -189,6 +198,7 @@ $search-gutter: var(--space-4);
 .search__note-content {
 	color: var(--color-neutral-text);
 	font-size: var(--font-size-sm);
+	letter-spacing: 0.02em;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
