--- a/.app/_includes/layouts/base.njk
+++ b/.app/_includes/layouts/base.njk
@@ -8,11 +8,17 @@ panel: true
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ app.description }}">
+    
     <title>{{ title or page.fileSlug }}</title>
-    <meta name="generator" content="{{ eleventy.generator }}">
     <link rel="stylesheet" href="{{ setup.css.output }}">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📝</text></svg>">
+    
+    {% if canonical %}
+      <link rel="canonical" href="{{ canonical }}" />
+    {% endif %}
+
     <meta name="view-transition" content="same-origin" />
+    <meta name="generator" content="{{ eleventy.generator }}">
   </head>
   <body>
     <script>document.documentElement.setAttribute("data-theme", /"(\w+)"+/.exec(localStorage.getItem("theme"))?.[1] || "system")</script>
