refactor note canonical link code

--- a/.app/_includes/layouts/base.njk
+++ b/.app/_includes/layouts/base.njk
@@ -13,8 +13,8 @@ panel: true
     <link rel="stylesheet" href="{{ setup.css.output }}">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📝</text></svg>">
     
-    {% if canonical %}
-      <link rel="canonical" href="{{ canonical }}" />
+    {% if canonicalLink %}
+      <link rel="canonical" href="{{ canonicalLink }}" />
     {% endif %}
 
     <meta name="view-transition" content="same-origin" />
